# LogSentinel

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Settings.toml  config.toml  config.toml.example  prometheus.yml  signatures.toml
.github/workflows/: release.yml
grafana/dashboards/: log_sentinel_dashboard.json
grafana/provisioning/dashboards/: logsentinel.yml
src/: aggregator.rs  analyzer.rs  config.rs  dispatcher.rs  error.rs  filter.rs  lib.rs  llmprovider.rs  main.rs  metrics.rs  models.rs  ratelimiter.rs  watcher.rs
