[package]
name = "log_sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] } 
async-trait = "0.1"
config = "0.14"
daemonize = "0.5"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
linemux = "0.3.0"
regex = "1.12.3"
prometheus = "0.13"
axum = "0.7"
lazy_static = "1.5"
