[package]
name = "log_sentinel"
version = "0.2.0"
edition = "2024"
authors = ["Gaspar Oriol"]
description = "A lightweight, AI-powered log analysis tool for real-time security threat detection."
documentation = "https://github.com/gasparoriol/LogSentinel/blob/main/README.md"
repository = "https://github.com/gasparoriol/LogSentinel"
license = "MIT"
keywords = ["logs", "security", "ai", "threat-detection", "rust"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "LogSentinel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] } 
async-trait = "0.1"
config = "0.14"
# daemonize movido a target specific dependencies
# daemonize = "0.5"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
linemux = "0.3.0"
regex = "1.12.3"
toml = "0.8"
prometheus = "0.13"
axum = "0.7"
lazy_static = "1.5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
